# CAD-

./: CMakeLists.txt  README 2.md  README.md  cad_model_manager
docs/: AI工具运用说明.md  考点对应说明.md  项目说明.md
include/: geometry.h  geometry_algorithm.h  model_manager.h  topology_checker.h
src/: geometry_algorithm.cpp  main.cpp  model_manager.cpp  topology_checker.cpp
